# Spawn

./: .clang-format  .clang-tidy  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md  conanfile.txt  test.py
.github/: workflows
.github/workflows/: clang-format.yml
c_compiler/: CMakeLists.txt  compiler.cpp  spawn_exe_launcher.c
c_compiler/c_bridge/: c_bridge.c  c_bridge.h  complex.h  notes.md
cli/: CMakeLists.txt  ModelicaBuildingsEnergyPlus.json  cli.cpp  cli.hpp  compile.cpp  compile.hpp  compilerchain.cpp  compilerchain.hpp  config.hpp.in  embed_jmodelica.cmake  embed_libc.cmake  embed_optimica.cmake  graal_isolate.h  iddtypes.hpp  jmodelica.h  main.cpp  modelDescription-example.xml  modelDescription.xml  modelDescription.xml.hpp  optimica.h  simulate.cpp  simulate.hpp  ziputil.cpp  ziputil.hpp
cli/test/RefBldgSmallOfficeNew2004_Chicago/: RefBldgSmallOfficeNew2004_Chicago.spawn
cmake/: ClangSanitize.cmake  ClangTidy.cmake  CompileOptions.cmake  Dependencies.cmake  EnergyPlus.cmake  GitVersion.cmake  PackageOptions.cmake  README.cmake  SignalExchange.patch  build-jmodelica.cmake  create_energyplus_version.cmake  energyplus_version.cmake.in  publish.py
compiler/: CMakeLists.txt  JIT.hpp  c_bridge.c  c_bridge.h  compiler.cpp  compiler.hpp  compiler2.cpp  spawn_exe_launcher.c  utility.cpp  utility.hpp
compiler/c_bridge/: c_bridge.c  c_bridge.h  stdlib.h
compiler/c_bridge/linux/: limits.h
compiler/c_bridge/sys/: types.h
docs/: Dockerfile
embedded/: CMakeLists.txt  CreateEmbeddedSource.cpp  EmbedFiles.cmake  embedded_files.cxx.in  embedded_files.hxx.in
energyplus/: actuatortypes.hpp  config.hpp  create_fmu.cpp  create_fmu.hpp  fmugenerator.cpp  iddtypes.hpp  idfprep.cpp  spawn.cpp  variables.cpp
energyplus/input/: input.hpp
energyplus_coroutine/: CMakeLists.txt  actuator_types.hpp  config.hpp  create_fmu.cpp  energyplus_helpers.cpp  energyplus_helpers.hpp  iddtypes.hpp  idf_to_json.hpp  idfprep.cpp  idfprep.hpp  libspawn.i  manager.cpp  output_types.hpp  spawn.cpp  spawn.hpp  start_time.hpp  variables.cpp  variables.hpp  warmup_manager.cpp  warmupmanager.cpp
energyplus_coroutine/input/: README.md  emsactuator.cpp  emsactuator.hpp  input.cpp  input.hpp  outputvariable.cpp  outputvariable.hpp  runperiod.cpp  runperiod.hpp  schedule.cpp  schedule.hpp  (+6 more)
epfmi/: CMakeLists.txt  EPComponent.cpp  EPComponent.hpp  EPFMI.cpp  EPFMI.hpp  EPFMI_Export.hpp  Variables.cpp  Variables.hpp  paths.cpp  paths.hpp
epfmi/Test/: RefBldgSmallOfficeNew2004_Chicago.idf  Single_Model_Test.cpp  Two_Model_Test.cpp  config.h.in
examples/: CMakeLists.txt  sim.cpp  sim.py  test.py
fmi2/: StateMachinesTable.xls
fmu/: CMakeLists.txt  fmi.cpp  fmi.hpp  fmi2.cpp  fmi2.hpp  fmu.cpp  fmu.hpp  fmu_type.hpp  logger.h  modeldescription.cpp  modeldescription.hpp  modelexchange.cpp  modelexchange.hpp  simulate.cpp  simulate.hpp
jmodelica/: CMakeLists.txt  JModelica.java  SpawnCompilerDelegator.java
lib/: CMakeLists.txt  actuatortypes.hpp  createfmu.cpp  createfmu.h  emsactuator.cpp  emsactuator.hpp  fmugenerator.cpp  fmugenerator.hpp  iddtypes.hpp  idf_to_json.cpp  idf_to_json.hpp  idfprep.cpp  idfprep.hpp  input.cpp  input.hpp  libspawn.i  manager.cpp  manager.hpp  modelDescription.xml.hpp  outputtypes.hpp  outputvariable.hpp  schedule.cpp  schedule.hpp  spawn.cpp  spawn.hpp  units.cpp  units.hpp  variables.cpp  variables.hpp  warmupmanager.cpp  warmupmanager.hpp  ziputil.cpp  ziputil.hpp  zone.cpp  zone.hpp
lib/input/: emsactuator.cpp  emsactuator.hpp  input.cpp  input.hpp  outputvariable.cpp  outputvariable.hpp  schedule.cpp  schedule.hpp  surface.cpp  surface.hpp  zone.cpp  zone.hpp
lib/msvc/: dirent.h
mbl/: CMakeLists.txt  config.cpp.in  config.hpp
mbl/cmake/: copy_epfmi_to_mbl.cmake.in  copy_spawn_to_mbl.cmake.in  update_mbl_version.cmake
modelica/: CMakeLists.txt  Modelica.java  SpawnCompilerDelegator.java  create_exe.cpp  create_exe.hpp  create_fmu.cpp  create_fmu.hpp  modelica_engine.hpp  simulate.cpp  simulate.hpp
open_modelica/: CMakeLists.txt  README.md  open_modelica_engine.cpp  open_modelica_engine.hpp  strings.hpp
open_modelica/cmake/: build_and_import_open_modelica.cmake
open_modelica/test/: test_compiler.cpp
optimica/: CMakeLists.txt  DownloadModelica.cmake  Optimica.java  SpawnCompilerDelegator.java  config.cpp.in  config.hpp  graal_isolate.h  optimica.cpp  optimica.hpp  optimica_engine.cpp  optimica_engine.hpp  reflect.cpp.in
python/: test_python.in.py  test_python.py
spawn_cli/: CMakeLists.txt  cli.cpp  cli.hpp  main.cpp  paths.cpp  paths.hpp
submodules/jmodelica/RuntimeLibrary/src/jmi/: CMakeLists.txt  jmi.c  jmi_array_none.h  jmi_block_log.c  jmi_brent_solver.c  jmi_delay.c  jmi_delay.h  jmi_global.c  jmi_me.c  jmi_me.h  jmi_util.c  jmi_util.h
test/: CMakeLists.txt  catch.cpp  config.h.in  create_epfmu.cpp  create_epfmu.hpp  example_fmu_lib.cpp  example_func.c  fmi.cpp  fmi_load_test.cpp  func.c  go.c  hello_world.c  main.c  output.c  paths.hpp  paths.in.cpp  spawn.cpp  spawn.hpp  spdlog.cpp  spdlog.hpp  spdlog2.cpp  spdlog2.hpp  spdlog_shared.cpp  spdlog_shared.hpp  spdlog_static.cpp  spdlog_static.hpp  temp_directory.cpp  test.c  test.py.in  test_compiler.cpp  test_embedded_compiler.cpp  test_epfmi.cpp  test_example_files.cpp  test_floating_zone.cpp  test_fmi.cpp  test_infiltration.cpp  test_mbl_idf.cpp  test_run_period.cpp  test_simulate.cpp  test_single_family_house.cpp  (+13 more)
test/models/: Zone_Multiplier.mo.in
util/: CMakeLists.txt  compare.cpp  compare.hpp  config.cpp.in  config.hpp  conversion.hpp  datetime.cpp  datetime.hpp  dynamiclibrary.hpp  dynamiclibrary_posix.hpp  dynamiclibrary_windows.hpp  env_vars.hpp  exec.hpp  filesystem.hpp  fmi_paths.hpp  idf_to_json.cpp  idf_to_json.hpp  math.hpp  paths.cpp  paths.hpp  paths.in.cpp  platform.cpp  platform.hpp  strings.cpp  strings.hpp  temp_directory.cpp  temp_directory.hpp  unique_id.cpp  unique_id.hpp  unzipped_file.cpp  unzipped_file.hpp  ziputil.cpp  ziputil.hpp
util/test/: spawn_utils_tests.cpp  test_datetime.cpp
workflows/: clang-format.yml
(+302 files in other folders)
